# projeto_consumo_api

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: configuracao-projeto.md  index.md  testes.md
docs/arquitetura/: camada-servico.md  visao-geral.md
docs/primeiros-passos/: configuracao-banco.md  instalacao.md
docs/referencia-api/: pokemon-service.md
docs/uso/: cli.md
src/: alembic.ini  dependencias.py  main.py  requirements.txt
src/core/: configuracoes.py
src/migrations/: env.py
src/migrations/versions/: 0f239e76ec59_criar_tabela_de_pokemons.py
src/models/: pokemon_model.py
src/schemas/: pokemon_schema.py
src/services/: pokemon_service.py  usuario_service.py
src/tests/: test_pokemon.py  test_usuario.py
